--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
 .App {
   text-align: center;
+  background: conic-gradient(
+    from 167.75deg at 26.05% 40.64%,
+    rgba(207, 238, 187, 0.881587) -18.97deg,
+    #abe1c9 8.74deg,
+    #80cdd7 160.76deg,
+    #7c9ce5 225.35deg,
+    rgba(126, 163, 230, 0.22) 298.84deg,
+    rgba(207, 238, 187, 0.881587) 341.03deg,
+    #abe1c9 368.74deg
+  );
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.component-container {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  backdrop-filter: blur(300px);
 }
